CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(Demo VERSION "1.0.0")

IF (${CMAKE_BUILD_TYPE} STREQUAL Debug)
  MESSAGE(DEBUG "Jessas, da will schon wieder wer Debuggen")
  IF (${CMAKE_C_COMPILER_ID} STREQUAL GNU)
     STRING(APPEND CMAKE_C_FLAGS " -O0 -g3 -Wall -Werror")
  ENDIF()
  IF (${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
     STRING(APPEND CMAKE_CXX_FLAGS " -O0 -g3 -Wall -Werror")
  ENDIF()
ENDIF()

ADD_SUBDIRECTORY(libhello)
ADD_SUBDIRECTORY(bin)
