IF (${USE_BLACKLIST})
  ADD_LIBRARY(blacklist

    blacklist.h
    blacklist.cpp
  )
  TARGET_INCLUDE_DIRECTORIES(blacklist INTERFACE .)
  TARGET_COMPILE_DEFINITIONS(blacklist INTERFACE DEMO_USE_BLACKLIST=1)
ELSE()
  ADD_LIBRARY(blacklist INTERFACE)
  TARGET_COMPILE_DEFINITIONS(blacklist INTERFACE DEMO_USE_BLACKLIST=0)
ENDIF()
